--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.Designer.cs">
+      <DependentUpon>planowanieRealizacjiKursu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Przykładowy widok\planowanieRealizacjiKursu.resx">
+      <DependentUpon>planowanieRealizacjiKursu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -79,6 +88,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Widoki Bielecki\" />
+    <Folder Include="Widoki Mastaliński\" />
+    <Folder Include="Widoki Wilk\" />
+    <Folder Include="Widoki Zagata\" />
+    <Folder Include="Widoki Zagoła\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
