--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -69,6 +69,12 @@
       <DependentUpon>DodawanieNowejLinii.cs</DependentUpon>
     </Compile>
     <Compile Include="Widoki Bielecki\OnMouseLeaveButton1.cs" />
+    <Compile Include="Widoki Zagoła\DodawaniePrzystanku.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Widoki Zagoła\DodawaniePrzystanku.Designer.cs">
+      <DependentUpon>DodawaniePrzystanku.cs</DependentUpon>
+    </Compile>
     <Compile Include="Widoki Zagoła\DodawanieTrasy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Widoki Bielecki\DodawanieNowejLinii.resx">
       <DependentUpon>DodawanieNowejLinii.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Widoki Zagoła\DodawaniePrzystanku.resx">
+      <DependentUpon>DodawaniePrzystanku.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Widoki Zagoła\DodawanieTrasy.resx">
       <DependentUpon>DodawanieTrasy.cs</DependentUpon>
