--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -49,12 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="exitbutton\MouseEnter.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.cs">
@@ -63,6 +57,7 @@
     <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.Designer.cs">
       <DependentUpon>planowanieRealizacjiKursu.cs</DependentUpon>
     </Compile>
+    <Compile Include="SharedView.cs" />
     <Compile Include="Widoki Bielecki\DodawanieNowejLinii.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +70,18 @@
     </Compile>
     <Compile Include="Widoki Bielecki\WypelnianieCzasuRealizacjiKursu.Designer.cs">
       <DependentUpon>WypelnianieCzasuRealizacjiKursu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Widoki Mastaliński\DodawanieKursu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Widoki Mastaliński\DodawanieKursu.Designer.cs">
+      <DependentUpon>DodawanieKursu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Widoki Mastaliński\DodawaniePojazdow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Widoki Mastaliński\DodawaniePojazdow.Designer.cs">
+      <DependentUpon>DodawaniePojazdow.cs</DependentUpon>
     </Compile>
     <Compile Include="Widoki Wilk\DodawanieKierowcy.cs">
       <SubType>Form</SubType>
@@ -100,9 +107,6 @@
     <Compile Include="Widoki Zagoła\DodawanieTrasy.Designer.cs">
       <DependentUpon>DodawanieTrasy.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -121,6 +125,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Widoki Bielecki\WypelnianieCzasuRealizacjiKursu.resx">
       <DependentUpon>WypelnianieCzasuRealizacjiKursu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Widoki Mastaliński\DodawanieKursu.resx">
+      <DependentUpon>DodawanieKursu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Widoki Mastaliński\DodawaniePojazdow.resx">
+      <DependentUpon>DodawaniePojazdow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Widoki Wilk\DodawanieKierowcy.resx">
       <DependentUpon>DodawanieKierowcy.cs</DependentUpon>
@@ -147,10 +157,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Widoki Mastaliński\" />
-    <Folder Include="Widoki Zagata\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\time.png" />
   </ItemGroup>
