--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -157,7 +157,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Alert-Download-PNG.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\time.png" />
   </ItemGroup>
