--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -60,10 +60,10 @@
     <Compile Include="exitbutton\MouseEnter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.cs">
+    <Compile Include="Views\planowanieRealizacjiKursu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Przykładowy widok\planowanieRealizacjiKursu.Designer.cs">
+    <Compile Include="Views\planowanieRealizacjiKursu.Designer.cs">
       <DependentUpon>planowanieRealizacjiKursu.cs</DependentUpon>
     </Compile>
     <Compile Include="SharedView.cs" />
@@ -73,59 +73,58 @@
     </Compile>
     <Compile Include="TestClassAttribute.cs" />
     <Compile Include="TestContext.cs" />
-    <Compile Include="Widoki Bielecki\DodajPrzystanekDoTrasy.cs">
+    <Compile Include="Views\DodajPrzystanekDoTrasy.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Bielecki\DodajPrzystanekDoTrasy.Designer.cs">
+    <Compile Include="Views\DodajPrzystanekDoTrasy.Designer.cs">
       <DependentUpon>DodajPrzystanekDoTrasy.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Bielecki\DodawanieNowejLinii.cs">
+    <Compile Include="Views\DodawanieNowejLinii.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Bielecki\DodawanieNowejLinii.Designer.cs">
+    <Compile Include="Views\DodawanieNowejLinii.Designer.cs">
       <DependentUpon>DodawanieNowejLinii.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Bielecki\OnMouseLeaveButton1.cs" />
-    <Compile Include="Widoki Bielecki\WypelnianieCzasuRealizacjiKursu.cs">
+    <Compile Include="Views\WypelnianieCzasuRealizacjiKursu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Bielecki\WypelnianieCzasuRealizacjiKursu.Designer.cs">
+    <Compile Include="Views\WypelnianieCzasuRealizacjiKursu.Designer.cs">
       <DependentUpon>WypelnianieCzasuRealizacjiKursu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Mastaliński\DodawanieKursu.cs">
+    <Compile Include="Views\DodawanieKursu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Mastaliński\DodawanieKursu.Designer.cs">
+    <Compile Include="Views\DodawanieKursu.Designer.cs">
       <DependentUpon>DodawanieKursu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Mastaliński\DodawaniePojazdow.cs">
+    <Compile Include="Views\DodawaniePojazdow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Mastaliński\DodawaniePojazdow.Designer.cs">
+    <Compile Include="Views\DodawaniePojazdow.Designer.cs">
       <DependentUpon>DodawaniePojazdow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Wilk\DodawanieKierowcy.cs">
+    <Compile Include="Views\DodawanieKierowcy.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Wilk\DodawanieKierowcy.Designer.cs">
+    <Compile Include="Views\DodawanieKierowcy.Designer.cs">
       <DependentUpon>DodawanieKierowcy.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Wilk\WybórEkranu.cs">
+    <Compile Include="Views\WybórEkranu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Wilk\WybórEkranu.Designer.cs">
+    <Compile Include="Views\WybórEkranu.Designer.cs">
       <DependentUpon>WybórEkranu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Zagoła\DodawaniePrzystanku.cs">
+    <Compile Include="Views\DodawaniePrzystanku.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Zagoła\DodawaniePrzystanku.Designer.cs">
+    <Compile Include="Views\DodawaniePrzystanku.Designer.cs">
       <DependentUpon>DodawaniePrzystanku.cs</DependentUpon>
     </Compile>
-    <Compile Include="Widoki Zagoła\DodawanieTrasy.cs">
+    <Compile Include="Views\DodawanieTrasy.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Widoki Zagoła\DodawanieTrasy.Designer.cs">
+    <Compile Include="Views\DodawanieTrasy.Designer.cs">
       <DependentUpon>DodawanieTrasy.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -138,34 +137,34 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Przykładowy widok\planowanieRealizacjiKursu.resx">
+    <EmbeddedResource Include="Views\planowanieRealizacjiKursu.resx">
       <DependentUpon>planowanieRealizacjiKursu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Bielecki\DodajPrzystanekDoTrasy.resx">
+    <EmbeddedResource Include="Views\DodajPrzystanekDoTrasy.resx">
       <DependentUpon>DodajPrzystanekDoTrasy.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Bielecki\DodawanieNowejLinii.resx">
+    <EmbeddedResource Include="Views\DodawanieNowejLinii.resx">
       <DependentUpon>DodawanieNowejLinii.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Bielecki\WypelnianieCzasuRealizacjiKursu.resx">
+    <EmbeddedResource Include="Views\WypelnianieCzasuRealizacjiKursu.resx">
       <DependentUpon>WypelnianieCzasuRealizacjiKursu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Mastaliński\DodawanieKursu.resx">
+    <EmbeddedResource Include="Views\DodawanieKursu.resx">
       <DependentUpon>DodawanieKursu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Mastaliński\DodawaniePojazdow.resx">
+    <EmbeddedResource Include="Views\DodawaniePojazdow.resx">
       <DependentUpon>DodawaniePojazdow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Wilk\DodawanieKierowcy.resx">
+    <EmbeddedResource Include="Views\DodawanieKierowcy.resx">
       <DependentUpon>DodawanieKierowcy.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Wilk\WybórEkranu.resx">
+    <EmbeddedResource Include="Views\WybórEkranu.resx">
       <DependentUpon>WybórEkranu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Zagoła\DodawaniePrzystanku.resx">
+    <EmbeddedResource Include="Views\DodawaniePrzystanku.resx">
       <DependentUpon>DodawaniePrzystanku.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Widoki Zagoła\DodawanieTrasy.resx">
+    <EmbeddedResource Include="Views\DodawanieTrasy.resx">
       <DependentUpon>DodawanieTrasy.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -189,7 +188,9 @@
   <ItemGroup>
     <None Include="Resources\time.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Przykładowy widok\" />
+  </ItemGroup>
   <ItemGroup Condition="$(VisualStudioVersion) == '15.0'">
     <Reference Include="Microsoft.Data.Tools.Schema.Sql, Version=13.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>$(SSDTPath)\Microsoft.Data.Tools.Schema.Sql.dll</HintPath>
