Backend do tworzenia użytkowników.

--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Models\CreatingUsers.cs" />
     <Compile Include="Models\DayType.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Report.cs">
