--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Report.dbml</DependentUpon>
     </Compile>
     <Compile Include="Models\routeElementModel.cs" />
+    <Compile Include="Models\StopsInOrder.cs" />
     <Compile Include="Models\TimeTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
