Implementacja dodawania kierowców do bazy.
*Usunięcie pola data urodzenia z formularza, ponieważ tego pola nie uwzględnialiśmy w projekcie bazy danych.

--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Models\AddingDrivers.cs" />
     <Compile Include="Models\CreatingUsers.cs" />
     <Compile Include="Models\DayType.cs" />
     <Compile Include="Models\Login.cs" />
