--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Models\AddingDrivers.cs" />
+    <Compile Include="Models\AddingLine.cs" />
     <Compile Include="Models\CreatingUsers.cs" />
     <Compile Include="Models\DayType.cs" />
     <Compile Include="Models\Login.cs" />
