*zmiany w bazie danych w tabeli pojazdy - dodanie pola pola nr_vin oraz data_produkcji *zmiany w przykładowych danych pod zmiany w bazie *początek backendu do formularza tworzenia pojazdów

--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\AddingBusStops.cs" />
     <Compile Include="Models\AddingDrivers.cs" />
     <Compile Include="Models\AddingLine.cs" />
+    <Compile Include="Models\AddingVehicles.cs" />
     <Compile Include="Models\CreatingUsers.cs" />
     <Compile Include="Models\DayType.cs" />
     <Compile Include="Models\Login.cs" />
