--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\AddingDrivers.cs" />
     <Compile Include="Models\AddingLine.cs" />
     <Compile Include="Models\AddingVehicles.cs" />
+    <Compile Include="Models\AddTrail.cs" />
     <Compile Include="Models\CreatingUsers.cs" />
     <Compile Include="Models\DayType.cs" />
     <Compile Include="Models\Login.cs" />
