--- a/WindowsFormsApp1/hiddenAnaconda.csproj
+++ b/WindowsFormsApp1/hiddenAnaconda.csproj
@@ -107,11 +107,11 @@
     <Compile Include="Views\DodawanieUzytkownikow.Designer.cs">
       <DependentUpon>DodawanieUzytkownikow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\EdycjaUżytkowników.cs">
+    <Compile Include="Views\EdycjaUzytkownikow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\EdycjaUżytkowników.Designer.cs">
-      <DependentUpon>EdycjaUżytkowników.cs</DependentUpon>
+    <Compile Include="Views\EdycjaUzytkownikow.Designer.cs">
+      <DependentUpon>EdycjaUzytkownikow.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\EkranLogowania.cs">
       <SubType>Form</SubType>
@@ -200,8 +200,8 @@
     <EmbeddedResource Include="Views\DodawanieUzytkownikow.resx">
       <DependentUpon>DodawanieUzytkownikow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\EdycjaUżytkowników.resx">
-      <DependentUpon>EdycjaUżytkowników.cs</DependentUpon>
+    <EmbeddedResource Include="Views\EdycjaUzytkownikow.resx">
+      <DependentUpon>EdycjaUzytkownikow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\EkranLogowania.resx">
       <DependentUpon>EkranLogowania.cs</DependentUpon>
